# splitvar

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
conda/: meta.yaml
docs/: Makefile  conf.py  index.rst
splitvar/: __init__.py  cli.py  splitvar.py  utils.py
test/: ACCESS1-0_rcp85_r1i1p1_ocean_surface_flux.nc  ocean_scalar.nc  test_splitvar.py
